HTML has been completed re-done so that CSS could cascade correctly. Image and submission form are in place, as are light and dark mode buttons

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,35 +1,97 @@
-* {
-    padding: 0;
-    margin: 0;
+*,
+*::before
+*::after {
+    box-sizing: border-box;
 }
 
 
 body {
-    
+    margin: 0;
 }
 
 header {
-    padding: 25px;
+    padding: 35px;
     border-style: groove;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: solid 5px rgb(113, 6, 235);
+    font-family: 'Sevillana', 'Arial Narrow', Arial, sans-serif;
+}
+
+.button1, .button2 {
+    float: right;
+    margin-right: 2px;
+    font-size: 20px;
+}
+
+.button1:hover {
+    
+}
+
+.grid-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    border-style: groove;
+    border: solid 5px rgb(113, 6, 235);
+    align-content: space-around;
+    gap: 10px;
+}
+
+.col-1, .col-2 {
+    padding: 10px;
+    border-style: groove;
+    border: solid 2px rgb(113, 6, 235);
+    width: 50%;
+    height: 855px;
+    text-align: center;
+    
+}
+
+.col-2 {
+    height: 855px;
+    align-content: center;
+    
 
 }
 
-.button1 {
-
+.img {
+    max-width: 75%;
+    max-height: 100%;
+    padding-top: 20px;
+    border-radius: 50%;
 }
 
-.button2 {
-
+h1 {
+    font-size: 45px;
 }
 
-.submission {
-
+h4 {
+    font-size: 20px;
 }
 
-#username #title #content {
+h1, h4 {
+    color: rgb(240, 13, 221);
+    font-family: 'Sevillana';
+}
+
+.submission-form {
     padding: 10px;
     margin: auto;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 15px;
+    font-family: 'Sevillana', 'Arial Narrow', Arial, sans-serif;
+    size: 15px;
+}
+
+.submit {
+    padding: 10px 450px;
+    margin-top: 10px;
+    background-color: black;
+    border-radius: 8px;
+    color: rgb(240, 13, 221);
+    font-family: 'Sevillana', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+}
+
+@media screen and (max-width: 500px) {
+    .col {
+        width: 100%;
+    }
 }
